; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_compobj.c_test_CoInitializeEx.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_compobj.c_test_CoInitializeEx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COINIT_APARTMENTTHREADED = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [41 x i8] c"CoInitializeEx failed with error 0x%08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"OleInitialize failed with error 0x%08x\0A\00", align 1
@S_FALSE = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [31 x i8] c"Expected S_FALSE, hr = 0x%08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_CoInitializeEx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_CoInitializeEx() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @COINIT_APARTMENTTHREADED, align 4
  %3 = call i64 @pCoInitializeEx(i32* null, i32 %2)
  store i64 %3, i64* %1, align 8
  %4 = load i64, i64* %1, align 8
  %5 = load i64, i64* @S_OK, align 8
  %6 = icmp eq i64 %4, %5
  %7 = zext i1 %6 to i32
  %8 = load i64, i64* %1, align 8
  %9 = call i32 @ok(i32 %7, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i64 %8)
  %10 = call i64 @OleInitialize(i32* null)
  store i64 %10, i64* %1, align 8
  %11 = load i64, i64* %1, align 8
  %12 = load i64, i64* @S_OK, align 8
  %13 = icmp eq i64 %11, %12
  %14 = zext i1 %13 to i32
  %15 = load i64, i64* %1, align 8
  %16 = call i32 @ok(i32 %14, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0), i64 %15)
  %17 = call i64 @OleInitialize(i32* null)
  store i64 %17, i64* %1, align 8
  %18 = load i64, i64* %1, align 8
  %19 = load i64, i64* @S_FALSE, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = load i64, i64* %1, align 8
  %23 = call i32 @ok(i32 %21, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.2, i64 0, i64 0), i64 %22)
  %24 = call i32 (...) @CoUninitialize()
  %25 = call i32 (...) @OleUninitialize()
  %26 = call i32 (...) @OleUninitialize()
  ret void
}

declare dso_local i64 @pCoInitializeEx(i32*, i32) #1

declare dso_local i32 @ok(i32, i8*, i64) #1

declare dso_local i64 @OleInitialize(i32*) #1

declare dso_local i32 @CoUninitialize(...) #1

declare dso_local i32 @OleUninitialize(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
